[gd_scene load_steps=21 format=3 uid="uid://dgrhssy80ss18"]

[ext_resource type="Script" path="res://Logic/CombatUtility/Tiles/Tile.gd" id="1_scmar"]
[ext_resource type="Material" uid="uid://dybc4a2mp16cg" path="res://Assets/Materials/TileGroundMaterial.tres" id="2_c24a5"]
[ext_resource type="Script" path="res://Logic/CombatUtility/Tiles/TileHighlight.gd" id="3_ho6t1"]
[ext_resource type="Material" uid="uid://dbf6q34gmno45" path="res://Assets/Materials/TileHighlightMaterial.tres" id="4_eqav3"]
[ext_resource type="Material" uid="uid://k1prmlwbo6lp" path="res://Shaders/HoverHighlight.tres" id="5_ihgi2"]
[ext_resource type="Material" uid="uid://1gqrknigw3j8" path="res://Shaders/MovementTarget.tres" id="6_alyjn"]
[ext_resource type="Material" uid="uid://b8dlfxl2dvdof" path="res://Shaders/SpellTargetHighlight.tres" id="6_bryv2"]
[ext_resource type="Material" uid="uid://cknjllbe38xwo" path="res://Shaders/SpellTargetHighlightStatic.tres" id="7_p4ipm"]

[sub_resource type="CylinderMesh" id="CylinderMesh_wyt28"]
material = ExtResource("2_c24a5")
top_radius = 1.0
bottom_radius = 1.0
height = 1.0
radial_segments = 6
rings = 1

[sub_resource type="BoxMesh" id="BoxMesh_ltq8m"]
material = ExtResource("4_eqav3")

[sub_resource type="QuadMesh" id="QuadMesh_m1xtl"]

[sub_resource type="QuadMesh" id="QuadMesh_g7058"]

[sub_resource type="Shader" id="Shader_oh2fb"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.2.1.stable's StandardMaterial3D.

shader_type spatial;
render_mode unshaded, blend_mix,depth_draw_opaque,cull_back, shadows_disabled;
uniform vec4 albedo : source_color;
uniform float time_scale = 1.0;
uniform float range = 0.04;
uniform float smooth_edge = 0.1;
uniform float width = 0.1;

uniform float alpha = 1.0;

float sdHexagon( in vec2 p, in float r )
{
    const vec3 k = vec3(-0.866025404,0.5,0.577350269);
    p = abs(p);
    p -= 2.0*min(dot(k.xy,p),0.0)*k.xy;
    p -= vec2(clamp(p.x, -k.z*r, k.z*r), r);
    return length(p)*sign(p.y);
}

void fragment() {
	float d = sdHexagon(2.59 * (vec2(UV.x - 0.5, UV.y - 0.5)), 1.0);
	ALBEDO = albedo.rgb;
	//float time_offset = range * sin(TIME * time_scale);
	float outer_edge = 1.0 - smoothstep(smooth_edge, smooth_edge, d);
	float inner_edge = smoothstep(width - smooth_edge, width + smooth_edge, d);
	ALPHA = outer_edge * inner_edge * alpha;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yh362"]
render_priority = 0
shader = SubResource("Shader_oh2fb")
shader_parameter/albedo = Color(1, 0.925537, 0.523438, 1)
shader_parameter/time_scale = 4.0
shader_parameter/range = 0.04
shader_parameter/smooth_edge = 0.13
shader_parameter/width = 0.09
shader_parameter/alpha = 1.0

[sub_resource type="QuadMesh" id="QuadMesh_opmr3"]

[sub_resource type="Shader" id="Shader_8f2ry"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.2.1.stable's StandardMaterial3D.

shader_type spatial;
render_mode unshaded, blend_mix,depth_draw_opaque,cull_back, shadows_disabled;
uniform vec4 albedo : source_color;
uniform float time_scale = 1.0;
uniform float range = 0.04;
uniform float smooth_edge = 0.1;
uniform float width = 0.1;

uniform float scale = 1.0;
uniform float alpha = 1.0;

float sdHexagon( in vec2 p, in float r )
{
    const vec3 k = vec3(-0.866025404,0.5,0.577350269);
    p = abs(p);
    p -= 2.0*min(dot(k.xy,p),0.0)*k.xy;
    p -= vec2(clamp(p.x, -k.z*r, k.z*r), r);
    return length(p)*sign(p.y);
}

void fragment() {
	float d = sdHexagon(2.50 * (vec2(UV.x - 0.5, UV.y - 0.5)), 1.0 * scale);
	ALBEDO = albedo.rgb;
	float time_offset = range * sin(TIME * time_scale);
	float outer_edge = 1.0 - smoothstep(time_offset-smooth_edge, time_offset+smooth_edge, d);
	float inner_edge = smoothstep(time_offset - width - smooth_edge, time_offset - width + smooth_edge, d);
	ALPHA = alpha * outer_edge * inner_edge;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w71nl"]
render_priority = 0
shader = SubResource("Shader_8f2ry")
shader_parameter/albedo = Color(1, 1, 0.188235, 1)
shader_parameter/time_scale = 4.0
shader_parameter/range = 0.04
shader_parameter/smooth_edge = 0.05
shader_parameter/width = 0.08
shader_parameter/scale = 0.87
shader_parameter/alpha = 0.415

[sub_resource type="QuadMesh" id="QuadMesh_4yaub"]

[sub_resource type="Shader" id="Shader_umg0b"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.2.1.stable's StandardMaterial3D.

shader_type spatial;
render_mode unshaded, blend_mix,depth_draw_opaque,cull_back, shadows_disabled;
uniform vec4 albedo : source_color;
uniform float time_scale = 1.0;
uniform float range = 0.04;
uniform float smooth_edge = 0.1;
uniform float width = 0.1;

uniform float alpha = 1.0;

float sdHexagon( in vec2 p, in float r )
{
    const vec3 k = vec3(-0.866025404,0.5,0.577350269);
    p = abs(p);
    p -= 2.0*min(dot(k.xy,p),0.0)*k.xy;
    p -= vec2(clamp(p.x, -k.z*r, k.z*r), r);
    return length(p)*sign(p.y);
}

void fragment() {
	float d = sdHexagon(2.59 * (vec2(UV.x - 0.5, UV.y - 0.5)), 1.0);
	ALBEDO = albedo.rgb;
	//float time_offset = range * sin(TIME * time_scale);
	float outer_edge = 1.0 - smoothstep(smooth_edge, smooth_edge, d);
	float inner_edge = smoothstep(width - smooth_edge, width + smooth_edge, d);
	ALPHA = outer_edge * inner_edge * alpha;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ifodc"]
render_priority = 0
shader = SubResource("Shader_umg0b")
shader_parameter/albedo = Color(0, 0.376471, 0, 1)
shader_parameter/time_scale = 4.0
shader_parameter/range = -0.15
shader_parameter/smooth_edge = 0.13
shader_parameter/width = -0.075
shader_parameter/alpha = 0.465

[node name="Tile" type="Node3D"]
script = ExtResource("1_scmar")

[node name="Hexagon" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
visible = false
mesh = SubResource("CylinderMesh_wyt28")

[node name="DebugLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.125358, -5.47957e-09)
visible = false
visibility_range_end = 9.0
visibility_range_end_margin = 0.5
visibility_range_fade_mode = 1
pixel_size = 0.003
text = "Tee"

[node name="Area3D" type="Area3D" parent="." groups=["tile_area"]]

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="Area3D"]
transform = Transform3D(0.866025, -0.5, 0, -2.18557e-08, -3.78552e-08, 1, -0.5, -0.866025, -4.37114e-08, 0, 0, 0)
depth = 0.2
polygon = PackedVector2Array(1, 0, 0.5, 0.866, -0.5, 0.866, -1, 0, -0.5, -0.866, 0.5, -0.866)

[node name="LogicalEntities" type="Node3D" parent="."]

[node name="Highlight" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.117866, 0)
script = ExtResource("3_ho6t1")

[node name="Edges" type="Node3D" parent="Highlight"]
visible = false

[node name="Edge1" type="MeshInstance3D" parent="Highlight/Edges"]
transform = Transform3D(0.866025, 0, 0.018452, 0, 0.235877, 0, -0.5, 0, 0.0319599, 0.42628, 0, 0.738338)
cast_shadow = 0
mesh = SubResource("BoxMesh_ltq8m")
skeleton = NodePath("../../..")

[node name="Edge2" type="MeshInstance3D" parent="Highlight/Edges"]
transform = Transform3D(0.8941, 0, 0.018452, 0, 0.235877, 0, -0.516209, 0, 0.0319599, -0.429618, 0, -0.744119)
cast_shadow = 0
mesh = SubResource("BoxMesh_ltq8m")
skeleton = NodePath("../../..")

[node name="Edge3" type="MeshInstance3D" parent="Highlight/Edges"]
transform = Transform3D(-5.85972e-08, 0, 0.0369041, 0, 0.235877, 0, -0.983099, 0, -3.72529e-09, -0.866, 0, 0.003)
cast_shadow = 0
mesh = SubResource("BoxMesh_ltq8m")
skeleton = NodePath("../../..")

[node name="Edge4" type="MeshInstance3D" parent="Highlight/Edges"]
transform = Transform3D(-6.11726e-08, 0, 0.0369041, 0, 0.235877, 0, -1.02631, 0, -3.72529e-09, 0.852, 0, 0)
cast_shadow = 0
mesh = SubResource("BoxMesh_ltq8m")
skeleton = NodePath("../../..")

[node name="Edge5" type="MeshInstance3D" parent="Highlight/Edges"]
transform = Transform3D(-0.857549, 0, 0.018452, 0, 0.235877, 0, -0.495107, 0, -0.0319599, 0.433373, 2.38419e-07, -0.755619)
cast_shadow = 0
mesh = SubResource("BoxMesh_ltq8m")
skeleton = NodePath("../../..")

[node name="Edge6" type="MeshInstance3D" parent="Highlight/Edges"]
transform = Transform3D(-0.877268, 0, 0.018452, 0, 0.235877, 0, -0.506491, 0, -0.0319599, -0.436516, 2.38419e-07, 0.751075)
cast_shadow = 0
mesh = SubResource("BoxMesh_ltq8m")
skeleton = NodePath("../../..")

[node name="HoverHexQuad" type="MeshInstance3D" parent="Highlight"]
transform = Transform3D(1.70253, 0.982956, 4.29664e-08, 0, -8.59328e-08, 1.96591, 0.982956, -1.70253, -7.442e-08, 0, 0.146032, 0)
visible = false
cast_shadow = 0
mesh = SubResource("QuadMesh_m1xtl")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("5_ihgi2")

[node name="MovementTarget" type="MeshInstance3D" parent="Highlight"]
transform = Transform3D(1.71534, 0.990354, 4.32898e-08, 0, -8.65796e-08, 1.98071, 0.990354, -1.71534, -7.49801e-08, 0, 0.146032, 0)
visible = false
cast_shadow = 0
mesh = SubResource("QuadMesh_g7058")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_alyjn")

[node name="PlayerFocus" type="MeshInstance3D" parent="Highlight"]
transform = Transform3D(1.71534, 0.990354, 4.32898e-08, 0, -8.65796e-08, 1.98071, 0.990354, -1.71534, -7.49801e-08, 0, 0.146032, 0)
visible = false
cast_shadow = 0
mesh = SubResource("QuadMesh_g7058")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_alyjn")

[node name="CombatHexQuad" type="MeshInstance3D" parent="Highlight"]
transform = Transform3D(1.70253, 0.982956, 4.29664e-08, 0, -8.59328e-08, 1.96591, 0.982956, -1.70253, -7.442e-08, 0, 0.146032, 0)
visible = false
cast_shadow = 0
mesh = SubResource("QuadMesh_g7058")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("7_p4ipm")

[node name="PossibleTargetQuad" type="MeshInstance3D" parent="Highlight"]
transform = Transform3D(1.70253, 0.982956, 4.29664e-08, 0, -8.59328e-08, 1.96591, 0.982956, -1.70253, -7.442e-08, 0, 0.146032, 0)
visible = false
cast_shadow = 0
mesh = SubResource("QuadMesh_g7058")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_yh362")

[node name="SelectedTargetQuad" type="MeshInstance3D" parent="Highlight"]
transform = Transform3D(1.70253, 0.982956, 4.29664e-08, 0, -8.59328e-08, 1.96591, 0.982956, -1.70253, -7.442e-08, 0, 0.146032, 0)
visible = false
cast_shadow = 0
mesh = SubResource("QuadMesh_opmr3")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_w71nl")

[node name="LowSpellEnergyHexQuad" type="MeshInstance3D" parent="Highlight"]
transform = Transform3D(1.70253, 0.982956, 4.29664e-08, 0, -8.59328e-08, 1.96591, 0.982956, -1.70253, -7.442e-08, 0, 0.146032, 0)
visible = false
cast_shadow = 0
mesh = SubResource("QuadMesh_4yaub")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_ifodc")

[node name="HighSpellEnergyHexQuad" type="MeshInstance3D" parent="Highlight"]
transform = Transform3D(1.70253, 0.982956, 4.29664e-08, 0, -8.59328e-08, 1.96591, 0.982956, -1.70253, -7.442e-08, 0, 0.146032, 0)
visible = false
cast_shadow = 0
mesh = SubResource("QuadMesh_opmr3")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_w71nl")

[node name="HoverTargetHexQuad" type="MeshInstance3D" parent="Highlight"]
transform = Transform3D(1.70261, 0.983, 4.29683e-08, 0, -8.59366e-08, 1.966, 0.983, -1.70261, -7.44233e-08, 0, 0.146, 0)
visible = false
cast_shadow = 0
mesh = SubResource("QuadMesh_m1xtl")
surface_material_override/0 = ExtResource("6_bryv2")

[node name="DrainProgressHexQuad" type="MeshInstance3D" parent="Highlight"]
transform = Transform3D(1.78401, 1.03, 4.50226e-08, 0, -9.00455e-08, 2.06, 1.03, -1.78401, -7.79817e-08, 0, 0.146, 0)
visible = false
cast_shadow = 0
mesh = SubResource("QuadMesh_m1xtl")
surface_material_override/0 = ExtResource("6_bryv2")

[node name="HoverTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="HoverTimer" to="." method="_on_hover_timer_timeout"]
